--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -56,9 +56,9 @@ We used an existing agent-based model, FRED (Framework for Reconstructing Epidem
 \section{Methods}
 \subsection{Model description}
 
-We used an existing agent-based model, FRED (Framework for Reconstructing Epidemic Dynamics) which was developed by the university of Pittsburgh in response to the 2009 influenza pandemic \cite{grefenstette2013}. We modified the model parameters to represent the natural history of COVID-19 and calibrated a set of parameters to reproduce current trends of deaths due to COVID-19 in the US. FRED simulates the spread of the virus in a population by recreating interactions among people on a daily basis. To accurately represent the population of each of the states simulated, we used a synthetic population of the US that represents demographic and geographic characteristics of the population in 2010 \cite{Wheaton2012}. Each human is modeled as an agent that visits a set of places defined by their activity space. This activity space contains places such as households, schools, workplaces, or neighborhood locations. Transmission of SARS-CoV-2 can occur when an infected person visits the same location as a susceptible person on the same day. Numbers of contacts per person are specific to each place type. For instance, school contacts do not depend on the size of the school but the age of the agent. Infected agents have a probability to stay at home if they develop symptoms. Those who do not stay at home continue their daily activities. Public health interventions are included in the model to represent the changes in agents’ behavior in response to an epidemic. 
+We used an existing agent-based model, FRED (Framework for Reconstructing Epidemic Dynamics) which was developed by the university of Pittsburgh in response to the 2009 influenza pandemic \cite{grefenstette2013}. We modified the model parameters to represent the natural history of COVID-19 and calibrated a set of parameters to reproduce current trends of deaths due to COVID-19 in the US. FRED simulates the spread of the virus in a population by recreating interactions among people on a daily basis. To accurately represent the population of each of the states simulated, we used a synthetic population of the US that represents demographic and geographic characteristics of the population in 2010 \cite{Wheaton2012}. Each human is modeled as an agent that visits a set of places defined by their activity space. This activity space contains places such as households, schools, workplaces, or neighborhood locations. Transmission of SARS-CoV-2 can occur when an infected person visits the same location as a susceptible person on the same day. Numbers of contacts per person are specific to each place type. For instance, school contacts do not depend on the size of the school but the age of the agent. In previous studies using FRED, these contact rates have been  adjusted to represent the observed attack rates of influenza \cite{grefenstette2013, Mossong2008_PLOS_Medicine}. Given the uncertainty on the attack rates for each place type for SARS-CoV-2, we used the same calibrated contact patterns and adjusted the transmission parameters for SARS-CoV-2. This means that although our model conserves the same contact patterns than for flu, the attack rate for each type of place is different. Estimates on the attack rate for different places would inform better the model.
 
-In this study, we limited the interventions to school closure and shelter in place. Schools are closed on a specific date to represent state-level guidelines \cite{ihme_covid19_forecasting}. In the case that schools are closed, students limit their activity space to household or neighborhood locations. Shelter-in-place interventions reduce each agent’s activity space to their household at a compliance level from 0-100\%, which was estimated as part of the model calibration. Agents who do not comply with the shelter-in-place orders continue with their daily routines. We used state-level orders to determine the date at which people are advised to shelter in place \cite{ihme_covid19_forecasting}. 
+In the model, infected agents have a probability to stay at home if they develop symptoms. Those who do not stay at home continue their daily activities. Public health interventions are included in the model to represent the changes in agents’ behavior in response to an epidemic. We limited this interventions to school closure and shelter in place. Schools are closed on a specific date to represent state-level guidelines \cite{ihme_covid19_forecasting}. In the case that schools are closed, students limit their activity space to household or neighborhood locations. Shelter-in-place interventions reduce each agent’s activity space to their household at a compliance level from 0-100\%, which was estimated as part of the model calibration. Agents who do not comply with the shelter-in-place orders continue with their daily routines. We used state-level orders to determine the date at which people are advised to shelter in place \cite{ihme_covid19_forecasting}. 
 
 \subsection{Model parameters}
 For the infectious period, we referred to estimates by He et al. that 44\% of transmission occurs before symptom onset and that infectiousness peaks 0.6 days before the onset of symptoms, implying that infectiousness is gamma distributed with shape and rate parameters 2.47 and 0.775\cite{He2020_Nature}. In FRED, infectiousness is uniformly distributed through an individual’s infectious period. To accomodate He et al.’s findings about the distribution of infectiousness, we chose a gamma distributed infectious period so that the 44th and 97.5th percentiles of average infectiousness (accounting for differing lengths of the infectious periods) matched that of the infectiousness distribution found by He et al. These two constraints ensured a realistic amount of presymptomatic transmission, and that individuals were not infectious for an unrealistic length of time. We estimated the infectious period parameters using the optim function in R, finding that the shape and rate parameters of the infectious period distribution were 9.01 and 1.42 respectively, implying a mean infectious period of 6.35 days. Finally, we truncated the distribution at the 99.9th percentile. As a result, we obtained an infectious period with a median of 7 days (IQR: 6-9) in our simulations (Figure \ref{fig_params_periods}, top-left panel). 
