--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -40,7 +40,7 @@
 
 \date{}
 \title{Forecasting COVID-19 mortality in the US Midwest}
-\author{Guido Espa\~na,  Rachel Oidtman\textsuperscript{*}, Sean Cavany\textsuperscript{*}, Alan Costello, \\Anneliese Wieler, Anita Lerch, Carly Barbera,  Marya Poterek, Quan Tran,\\ Sean Moore, and T. Alex Perkins\\
+\author{Guido Espa\~na,  Rachel Oidtman\textsuperscript{*}, Sean Cavany\textsuperscript{*}, Alan Costello, \\Annaliese Wieler, Anita Lerch, Carly Barbera,  Marya Poterek, Quan Tran,\\ Sean Moore, and T. Alex Perkins\\
   \textsuperscript{1}University of Notre Dame, United States\\  
   \textsuperscript{*} Equal contribution
 }
