--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -50,7 +50,7 @@
 
 \setcounter{page}{1}
 \begin{abstract}
-We used an existing agent-based model, FRED (Framework for Reconstructing Epidemic Dynamics), which was originally developed by the University of Pittsburgh in response to the 2009 influenza pandemic. We adapted FRED for modeling COVID-19 in the US by updating epidemiological parameters based on studies to date. FRED explicitly models transmission dynamics of a pathogen in a realistic population, and it allows for the impacts of NPIs to be modeled explicitly (e.g., school closure results in agents representing children staying home). Our aim was to leverage the realism and geographic and demographic appropriateness of this model for the US to make short term forecasts of COVID-19, with a focus on incidence of cases and deaths and the impacts of NPIs thereon. At this time, we limit our analysis to six midwest states comprising Health and Human Services (HHS) Region 5.
+We used an existing agent-based model, FRED (Framework for Reconstructing Epidemic Dynamics), which was originally developed by the University of Pittsburgh in response to the 2009 influenza pandemic. We adapted FRED for modeling COVID-19 in the US by updating epidemiological parameters based on studies to date. FRED explicitly models transmission dynamics of a pathogen in a realistic population, and it allows for the impacts of NPIs to be modeled explicitly (e.g., school closure results in agents representing children staying home). Our aim was to leverage the realism and geographic and demographic appropriateness of this model for the US to make short term forecasts of COVID-19, with a focus on incidence of cases and deaths and the impacts of NPIs thereon. At this time, we limit our analysis to seven Midwest states comprising a coalition of states coordinating their response: Illinois, Indiana, Kentucky, Michigan, Minnesota, Ohio, and Wisconsin.
 \end{abstract}
 
 \section{Methods}
