Updated report for cdc forecasting challenge

--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.bib
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.bib
@@ -48,7 +48,7 @@
 }
 
 @techreport{bergMandatedBacillusCalmetteGuerin2020,
-  title = {Mandated {{Bacillus Calmette}}-{{Gu{\'e}rin}} ({{BCG}}) Vaccination Predicts Flattened Curves for the Spread of {{COVID}}-19},
+  title = {Mandated {{Bacillus Calmette}}-{{Gu\'erin}} ({{BCG}}) Vaccination Predicts Flattened Curves for the Spread of {{COVID}}-19},
   author = {Berg, Martha K and Yu, Qinggang and Salvador, Cristina E and Melani, Irene and Kitayama, Shinobu},
   year = {2020},
   month = apr,
@@ -250,7 +250,7 @@ FUNDING: Health and Medical Research Fund, Hong Kong.},
 }
 
 @article{domenicoExpectedImpactLockdown2020,
-  title = {Expected Impact of Lockdown in {{{\^I}le}}-de-{{France}} and Possible Exit Strategies},
+  title = {Expected Impact of Lockdown in {{\^Ile}}-de-{{France}} and Possible Exit Strategies},
   author = {Domenico, Laura Di and Pullano, Giulia and Sabbatini, Chiara E and Bo{\"e}lle, Pierre-Yves and Colizza, Vittoria},
   year = {2020},
   month = apr,
@@ -968,7 +968,7 @@ can provide an indication of how social interactions relate to transmission risk
   pages = {1--1},
   publisher = {{Public Library of Science}},
   doi = {10.1371/journal.pmed.0050074},
-  abstract = {Surveying 7,290 participants in eight European countries, Jo{\"e}l Mossong and colleagues determine patterns of person-to-person contact relevant to controlling pathogens spread by respiratory or close-contact routes.},
+  abstract = {Surveying 7,290 participants in eight European countries, Jo\"el Mossong and colleagues determine patterns of person-to-person contact relevant to controlling pathogens spread by respiratory or close-contact routes.},
   journal = {PLOS Medicine},
   number = {3}
 }
@@ -1307,7 +1307,7 @@ FUNDING: UK Medical Research Council.},
   month = feb,
   institution = {{Microbiology}},
   doi = {10.1101/2020.02.11.944462},
-  abstract = {The outbreak of a novel betacoronavirus (2019-nCov) represents a pandemic threat that has been declared a public health emergency of international concern. The CoV spike (S) glycoprotein is a key target for urgently needed vaccines, therapeutic antibodies, and diagnostics. To facilitate medical countermeasure (MCM) development we determined a 3.5 {\AA}-resolution cryo-EM structure of the 2019-nCoV S trimer in the prefusion conformation. The predominant state of the trimer has one of the three receptor-binding domains (RBDs) rotated up in a receptor-accessible conformation. We also show biophysical and structural evidence that the 2019-nCoV S binds ACE2 with higher affinity than SARS-CoV S. Additionally we tested several published SARS-CoV RBD-specific monoclonal antibodies and found that they do not have appreciable binding to nCoV-2019 S, suggesting antibody cross-reactivity may be limited between the two virus RBDs. The cryo-EM structure of 2019-nCoV S should enable rapid development and evaluation of MCMs to address the ongoing public health crisis.},
+  abstract = {The outbreak of a novel betacoronavirus (2019-nCov) represents a pandemic threat that has been declared a public health emergency of international concern. The CoV spike (S) glycoprotein is a key target for urgently needed vaccines, therapeutic antibodies, and diagnostics. To facilitate medical countermeasure (MCM) development we determined a 3.5 \AA{}-resolution cryo-EM structure of the 2019-nCoV S trimer in the prefusion conformation. The predominant state of the trimer has one of the three receptor-binding domains (RBDs) rotated up in a receptor-accessible conformation. We also show biophysical and structural evidence that the 2019-nCoV S binds ACE2 with higher affinity than SARS-CoV S. Additionally we tested several published SARS-CoV RBD-specific monoclonal antibodies and found that they do not have appreciable binding to nCoV-2019 S, suggesting antibody cross-reactivity may be limited between the two virus RBDs. The cryo-EM structure of 2019-nCoV S should enable rapid development and evaluation of MCMs to address the ongoing public health crisis.},
   language = {en},
   type = {Preprint}
 }
