Changes in report with likelihood of testing

--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -74,11 +74,11 @@ We separately simulated domestic and international importations following the ap
 
 \subsection{Model calibration}
 %% UPDATE DATE!!!
-We calibrated model parameters to recreate the daily number of deaths at the state level through April 29. We chose to calibrate the model to the reported number of deaths instead of the reported number of cases, as reported cases depend on the proportion of symptomatic infections, the level of reporting, the number of tests, and the accuracy of the tests. We assumed that all deaths are reported.
+Every week, we calibrate model parameters to recreate the daily number of deaths at the state level. We compared the model outcomes on deaths and symptomatic cases to the reported daily numbers of deaths and positive tests in each state. We assumed that all deaths are reported. 
 
-We calibrated four parameters: transmission probability, magnitude of importations, compliance of shelter-in-place orders, and the relative transmissibility of asymptomatic infections. We specified that transmission probability could vary from 0.3 - 1.5, magnitude of importations could vary from 0.1 - 1.5, and compliance of shelter-in-place orders could vary from 0.3 - 0.9. For the compliance of shelter-in-place orders, we assumed a linear increase in the number of people adhering to the shelter-in-place orders until the proportion of households adhering to shelter-in-place orders reached the estimated level of compliance with shelter-in-place orders (Figure \ref{fig_calibrated_parameters}). This increase was informed by mobility data reported by Google community reports, created in response to the pandemic (\url{https://www.google.com/covid19/mobility/)}. For the relative transmissibility of asymptomatic infections, we assumed a prior distribution based on estimates from Luo et al. \cite{Luo2020_Contact_MedRxiv}. We assumed that this value is distributed following a beta-binomial with a mean of 0.29.
+We calibrated five parameters: transmission probability, magnitude of importations, compliance of shelter-in-place orders, the relative transmissibility of asymptomatic infections, and a scale parameter to adjust for underreported symptomatic cases. We specified that transmission probability could vary from 0.3 - 1.5, magnitude of importations could vary from 0.1 - 1.5, and maximum compliance of shelter-in-place orders could vary from 0.3 - 0.9. We informed the compliance with shelter-in-place orders with the changes in mobility patterns in the Google community reports (\url{https://www.google.com/covid19/mobility/)}. We fitted a GAM to the trends from the percentage change on mobility trends for places of residence, as shown in figure \ref{fig_google_shelter}, and projected the compliance of shelter-in-place orders assuming a linear trend. We normalized these mobility trends from 0\% (baseline) to 100\% (everyone at home) and adjusted its magnitude with a parameter representing the maximum compliance in the historical trends (Figure \ref{fig_calibrated_parameters}). For the relative transmissibility of asymptomatic infections, we assumed a prior distribution based on estimates from Luo et al. \cite{Luo2020_Contact_MedRxiv}. We assumed that this value is distributed following a beta-binomial with a mean of 0.29. The adjustment parameter for testing resulted in around 0.05 for most of the states. The value for Michigan varied from 0.1 to 0.2, while for Ohio and Kentucky, it was below 0.02. 
 
-We simulated 500 combinations of these three parameters with five replicates for each set of values using the sobol function in pomp. For each state, we then calculated the probability of the reported deaths given each parameter combination for assuming that deaths follow a Poisson distribution. 
+We simulated 500 combinations of these three parameters with five replicates for each set of values using the sobol function in pomp. For each state, we then calculated the probability of the reported deaths given each parameter combination for assuming that deaths follow a negative binomial distribution. For each day, we estimated the probability of the proportion of positive tests in the data given a binomial distribution based on the probability of testing positive in the model. 
 
 Our model output for daily deaths and cumulative number of deaths through the calibration period closely matched the data to which it was fitted (Figures \ref{fig_deaths_cumulative}, \ref{fig_deaths_forecast}). Additionally, our model was able to accurately reproduce daily deaths outside of the timeframe to which we calibrated the model (Figure \ref{fig_deaths_forecast}). We also show estimates of the reproduction number in each of these states in figure \ref{fig_reproduction_number}. 
 
@@ -121,7 +121,7 @@ Our model captured the overall dynamics of the daily number of deaths reported f
 
 A strength of our study is that we calibrate our model to data on deaths from each state. Data on deaths is more robust to variability in reporting rates than the number of cases, and calibrating our model to them helps ensure our model is accurately reproducing transmission dynamics in these states. Nonetheless, deaths can also be underreported, and if this is the case it may be that we underestimated transmission slightly in our model. Furthermore, reported deaths have a larger delay than the number of daily cases, which reduces our ability to capture recent changes in the transmission dynamics. Our model calibration could be improved further by careful incorporation of data on reported cases and test results by state. Another limitation of our current model calibration is that we assumed a fixed proportion of adherence to shelter-in-place orders. Surveys in Italy suggest that this proportion decreases if  shelter-in-place orders are extended \cite{Briscese2020_NBER}. Qualitatively, our forecasts on the number of daily reported deaths are in agreement with most of the states in this study. Importantly, the model is unable to capture the recent increase in deaths in several states. This could be due in part to large recent outbreaks in enclosed facilities, such as a prison in Ohio, and a recent upturn in the number of deaths in Minnesota. 
 
-Currently, our model projects a greater effect of school closures than stay-at-home orders on transmission. This is not in line with other studies’ findings. There are two likely reasons for this. One is that our model, designed for flu initially, overweights transmission in schools and does not adequately represent other transmission locations. The second is that we may underestimate the compliance with shelter-in-place. We expect to resolve these issues in future model iterations. A final limitation of our model is that we don’t account for the full range of uncertainty in our model parameters. Though we account for stochasticity in the transmission process, we use single estimates for the moments of the underlying distributions. To overcome this issue, we estimate the relative transmissibility of asymptomatic infections with an informed prior distribution based on literature estimates. 
+Currently, our model projects a greater effect of school closures than stay-at-home orders on transmission. This is not in line with other studies’ findings. There are two likely reasons for this. One is that our model, designed for flu initially, overweights transmission in schools and does not adequately represent other transmission locations. We have estimated the relative infectivity of asymptomatic infections to account for this issue. The second is that we may underestimate the compliance with shelter-in-place. We expect to resolve these issues in future model iterations. A final limitation of our model is that we don’t account for the full range of uncertainty in our model parameters. Though we account for stochasticity in the transmission process, we use single estimates for the moments of the underlying distributions. To overcome this issue, we estimate the relative transmissibility of asymptomatic infections with an informed prior distribution based on literature estimates. 
 
 %% FUNDING STATEMENT SOMEWHERE
 \clearpage
