--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -74,13 +74,13 @@ We separately simulated domestic and international importations following the ap
 
 \subsection{Model calibration}
 %% UPDATE DATE!!!
-Every week, we calibrate model parameters to recreate the daily number of deaths at the state level. We compared the model outcomes on deaths and symptomatic cases to the reported daily numbers of deaths and positive tests in each state. We assumed that all deaths are reported. 
+Every week, we calibrate model parameters to recreate the daily number of deaths at the state level. We compared the model estimates for daily deaths to the data.
 
-We calibrated five parameters: transmission probability, magnitude of importations, compliance of shelter-in-place orders, the relative transmissibility of asymptomatic infections, and a scale parameter to adjust for underreported symptomatic cases. We specified that transmission probability could vary from 0.3 - 1.5, magnitude of importations could vary from 0.1 - 1.5, and maximum compliance of shelter-in-place orders could vary from 0.3 - 0.9. We informed the compliance with shelter-in-place orders with the changes in mobility patterns in the Google community reports (\url{https://www.google.com/covid19/mobility/)}. We fitted a GAM to the trends from the percentage change on mobility trends for places of residence, as shown in figure \ref{fig_google_shelter}, and projected the compliance of shelter-in-place orders assuming a linear trend. We normalized these mobility trends from 0\% (baseline) to 100\% (everyone at home) and adjusted its magnitude with a parameter representing the maximum compliance in the historical trends (Figure \ref{fig_calibrated_parameters}). For the relative transmissibility of asymptomatic infections, we assumed a prior distribution based on estimates from Luo et al. \cite{Luo2020_Contact_MedRxiv}. We assumed that this value is distributed following a beta-binomial with a mean of 0.29. The adjustment parameter for testing resulted in around 0.05 for most of the states. The value for Michigan varied from 0.1 to 0.2, while for Ohio and Kentucky, it was below 0.02. 
+We calibrated four parameters: transmission probability, magnitude of importations, compliance of shelter-in-place orders, the relative transmissibility of asymptomatic infections. We specified that transmission probability could vary from 0.3 - 1.5, magnitude of importations could vary from 0.1 - 1.5, and maximum compliance of shelter-in-place orders could vary from 0.3 - 0.9. We informed the compliance with shelter-in-place orders with the changes in mobility patterns in the Google community reports (\url{https://www.google.com/covid19/mobility/)}. We fitted a GAM to the trends from the percentage change on mobility trends for places of residence, as shown in figure \ref{fig_google_shelter}, and projected the compliance of shelter-in-place orders assuming a linear trend. We normalized these mobility trends from 0\% (baseline) to 100\% (everyone at home) and adjusted its magnitude with a parameter representing the maximum compliance in the historical trends (Figure \ref{fig_calibrated_parameters}). For the relative transmissibility of asymptomatic infections, we assumed a prior distribution based on estimates from Luo et al. \cite{Luo2020_Contact_MedRxiv}. We assumed that this value is distributed following a beta-binomial with a mean of 0.29.
 
-We simulated 500 combinations of these three parameters with five replicates for each set of values using the sobol function in pomp. For each state, we then calculated the probability of the reported deaths given each parameter combination for assuming that deaths follow a negative binomial distribution. For each day, we estimated the probability of the proportion of positive tests in the data given a binomial distribution based on the probability of testing positive in the model. 
+We simulated 2000 combinations of these three parameters with five replicates for each set of values using the sobol function in pomp. For each state, we then calculated the probability of the reported deaths given each parameter combination for assuming that deaths follow a negative binomial distribution. 
 
-The model captures the trends on the proportion of positive tests (Figure \ref{fig_pos_testing}). Also, our model output for daily deaths and cumulative number of deaths through the calibration period closely matched the data to which it was fitted (Figures \ref{fig_deaths_cumulative}, \ref{fig_deaths_forecast}). Additionally, our model was able to accurately reproduce daily deaths outside of the timeframe to which we calibrated the model (Figure \ref{fig_deaths_forecast}). We also show estimates of the reproduction number in each of these states in figure \ref{fig_reproduction_number}. 
+Our model output for daily deaths and cumulative number of deaths through the calibration period closely matched the data to which it was fitted (Figures \ref{fig_deaths_cumulative}, \ref{fig_deaths_forecast}).  We also show estimates of the reproduction number in each of these states in figure \ref{fig_reproduction_number}. 
 
 \begin{figure}[hb!]
 \centering
@@ -88,17 +88,15 @@ The model captures the trends on the proportion of positive tests (Figure \ref{f
 \caption{\label{fig_google_shelter} Changes in mobility patterns. Black line shows the fitted pattern in mobility to residential locations. Adherence to shelter-in-place then follows the same trend, but with the final magnitude in adherence calibrated by state to data on deaths. Colored lines represent the change in baseline mobility patterns according to the mobility reports from google.}
 \end{figure}
 
-\begin{figure}[hb!]
-\centering
-\includegraphics[width=\textwidth]{../figures/report_figure_positive_tests.jpeg} 
-\caption{\label{fig_deaths_forecast} Proportion of positive tests in six states. The colored lines represent each state. Black diamonds show the data used to fit the model, while empty diamonds show the recent data not used in the fitting process. Navy dashed line shows the time of schools closure and the dotted navy line shows the time of shelter-in-place orders.}
-\end{figure}
+% \begin{figure}[hb!]
+% \centering
+% \includegraphics[width=\textwidth]{../figures/report_figure_positive_tests.jpeg} 
+% \caption{\label{fig_deaths_forecast} Proportion of positive tests in six states. The colored lines represent each state. Black diamonds show the data used to fit the model, while empty diamonds show the recent data not used in the fitting process. Navy dashed line shows the time of schools closure and the dotted navy line shows the time of shelter-in-place orders.}
+% \end{figure}
 
 
 %% AUTOMATICALLY UPDATE THE FOLLOWING PARAGRAPHS!!!!
-Across states, the estimated parameters, such as the level of compliance with state orders of shelter in place, varied from state to state (Figure \ref{fig_calibrated_parameters}). These parameters were adjusted for each state to represent the state-by-state differences. The fitted values were similar across the states, except for Minnesota, which had the lowest level of compliance. The effective transmissibility parameter also varied across states, with the highest value adjusted for Minnesota to adjust for the increasing trend observed in the data. This increasing trend in Minnesota is also represented in the model with a reproduction number above 1, even after shelter-in-place orders were in place \ref{fig_reproduction_number}. Similarly, the google mobility trends show a reduction in the percentage of time spent at home in Minnesota, suggesting a reduction in the adherence to shelter-in-place orders. In the future, we will use time-varying data of people mobility patterns to account for these changing patterns. 
-
-Our model captured the overall dynamics of the daily number of deaths reported for each of the six states considered up to the calibration period (Figure \ref{fig_deaths_forecast},\ref{fig_deaths_cumulative}). Even though we did not fit the model with data reported after the calibration period, the 95\% posterior predictive interval of our model also captured the daily number of deaths reported in the week after the prediction dataset in all six states.
+Across states, the estimated parameters, such as the level of compliance with state orders of shelter in place, varied from state to state (Figure \ref{fig_calibrated_parameters}). These parameters were adjusted for each state to represent the state-by-state differences. The fitted values were similar across the states, except for Minnesota, which had the lowest level of compliance. The effective transmissibility parameter also varied across states, with the highest value adjusted for Minnesota to adjust for the increasing trend observed in the data. This increasing trend in Minnesota is also represented in the model with a reproduction number above 1, even after shelter-in-place orders were in place \ref{fig_reproduction_number}. Similarly, the google mobility trends show a reduction in the percentage of time spent at home in Minnesota, suggesting a reduction in the adherence to shelter-in-place orders. In the future, we will use time-varying data of people mobility patterns to account for these changing patterns. Our model captured the overall dynamics of the daily number of deaths reported for each of the six states considered up to the calibration period (Figure \ref{fig_deaths_forecast},\ref{fig_deaths_cumulative}).
 
 
 \begin{figure}[hb!]
