--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.tex
@@ -122,7 +122,7 @@ Across states, the estimated parameters, such as the level of compliance with st
 
 \subsection{Model limitations}
 
-A strength of our study is that we calibrate our model to data on deaths from each state. Data on deaths is more robust to variability in reporting rates than the number of cases, and calibrating our model to them helps ensure our model is accurately reproducing transmission dynamics in these states. Nonetheless, deaths can also be underreported, and if this is the case it may be that we underestimated transmission slightly in our model. Furthermore, reported deaths have a larger delay than the number of daily cases, which reduces our ability to capture recent changes in the transmission dynamics. Our model calibration could be improved further by careful incorporation of data on reported cases and test results by state. Another limitation of our current model calibration is that we assumed a fixed proportion of adherence to shelter-in-place orders. Surveys in Italy suggest that this proportion decreases if  shelter-in-place orders are extended \cite{Briscese2020_NBER}. Qualitatively, our forecasts on the number of daily reported deaths are in agreement with most of the states in this study. Importantly, the model is unable to capture the recent increase in deaths in several states. This could be due in part to large recent outbreaks in enclosed facilities, such as a prison in Ohio, and a recent upturn in the number of deaths in Minnesota. 
+A strength of our study is that we calibrate our model to data on deaths from each state. Data on deaths is more robust to variability in reporting rates than the number of cases, and calibrating our model to them helps ensure our model is accurately reproducing transmission dynamics in these states. Nonetheless, deaths can also be underreported, and if this is the case it may be that we underestimated transmission slightly in our model. Furthermore, reported deaths have a larger delay than the number of daily cases, which reduces our ability to capture recent changes in the transmission dynamics. Our model calibration could be improved further by careful incorporation of data on reported cases and test results by state. Qualitatively, our forecasts on the number of daily reported deaths are in agreement with most of the states in this study.
 
 Currently, our model projects a greater effect of school closures than stay-at-home orders on transmission. This is not in line with other studies’ findings. There are two likely reasons for this. One is that our model, designed for flu initially, overweights transmission in schools and does not adequately represent other transmission locations. We have estimated the relative infectivity of asymptomatic infections to account for this issue. The second is that we may underestimate the compliance with shelter-in-place. We expect to resolve these issues in future model iterations. A final limitation of our model is that we don’t account for the full range of uncertainty in our model parameters. Though we account for stochasticity in the transmission process, we use single estimates for the moments of the underlying distributions. To overcome this issue, we estimate the relative transmissibility of asymptomatic infections with an informed prior distribution based on literature estimates. 
 
