--- a/report/report_cdc_forecasting_covid19_NotreDame-FRED.bib
+++ b/report/report_cdc_forecasting_covid19_NotreDame-FRED.bib
@@ -578,6 +578,17 @@
   pmid = {32087820}
 }
 
+@article{Goldstein2020_JID,
+  title = {On the Effect of Age on the Transmission of {{SARS}}-{{CoV}}-2 in Households, Schools and the Community},
+  author = {Goldstein, E and Lipsitch, M and Cevik, M},
+  year = {2020},
+  month = oct,
+  issn = {0022-1899},
+  doi = {10.1093/infdis/jiaa691},
+  abstract = {There is limited information on the effect of age on the transmission of SARS-CoV-2 infection in different settings.We reviewed published studies/data on detection of SARS-CoV-2 infection in contacts of COVID-19 cases, serological studies, and studies of infections in schools.Compared to younger/middle aged adults, susceptibility to infection for children aged under 10y is estimated to be significantly lower, while estimated susceptibility to infection in adults aged over 60y is higher. Serological studies suggest that younger adults (particularly those aged under 35y) often have high cumulative incidence of SARS-CoV-2 infection in the community. There is some evidence that given limited control measures, SARS-CoV-2 may spread robustly in secondary/high schools, and to a lesser degree in primary schools, with class size possibly affecting that spread. There is also evidence of more limited spread in schools when some mitigation measures are implemented. Several potential biases that may affect these studies are discussed.Mitigation measures should be implemented when opening schools, particularly secondary/high schools. Efforts should be undertaken to diminish mixing in younger adults, particularly individuals aged 18-35y to mitigate the spread of the epidemic in the community.},
+  journal = {The Journal of Infectious Diseases}
+}
+
 @misc{GoogleMobilityReports_2020,
   title = {{{COVID}}-19 {{Community Mobility Report}}},
   abstract = {See how your community is moving around differently due to COVID-19},
